fix the \n at the end of the string

--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -4,11 +4,10 @@
 # deliver: deliver.o
 # clean:
 # 		rm -f *.o server deliver
-LDFLAGS=-pthread
 all: server client 
 server: server.c packet.h database.h
-	gcc server.c -o server
-deliver: client.c packet.h 
-	gcc clinet.c -o client
+	gcc server.c -o server -pthread
+client: client.c packet.h database.h
+	gcc client.c -o client -pthread
 clean:  
 	rm -f ${server client}
